# LiquidState

./: .gitignore  .replit  =2.10  API_DOCUMENTATION.md  COMPREHENSIVE_TEST_SUMMARY.md  CONVENIENCE_API_INTEGRATION_TEST_REPORT.md  DEPLOYMENT_GUIDE.md  ENHANCED_TOKENIZER_CONVENIENCE_GUIDE.md  ENHANCEMENT_SUMMARY.md  ERROR_HANDLING_SUMMARY.md  FINAL_CONVENIENCE_API_INTEGRATION_VALIDATION_REPORT.md  FINAL_INTEGRATION_TEST_SUMMARY.md  GETTING_STARTED.md  LSM_TRAINING_TECHNICAL_SPECIFICATION.md  MIGRATION_GUIDE.md  Nick's to-do list.txt  PERFORMANCE_OPTIMIZATION_SUMMARY.md  PROJECT_STRUCTURE.md  README.md  TROUBLESHOOTING_GUIDE.md  advanced_reservoir.py  advanced_reservoirs_summary.md  check_class_structure.py  check_lines.py  check_syntax.py  cnn_model.py  colab_tensor_lambda_fix.txt  colab_usage_guide.md  complete_persistence_results.txt  data_loader.py  dataset_cache.csv  debug_classifier_imports.py  debug_classifier_step_by_step.py  debug_inference_only.py  debug_training_output_fixed.txt  debug_training_pipeline.py  demonstrate_predictions.py  fix_training_errors.py  inference.py  input_validation.py  (+52 more)
attached_assets/: Pasted-2025-08-06-20-57-23-562735-E-external-local-xla-xla-stream-executor-cuda-cuda-fft-cc-467-Unable-to-1754513876562_1754513876564.txt  Pasted-No-GPUs-found-Using-CPU-Starting-LSM-training-with-parameters-Window-size-64-Batch-size--1754514214313_1754514214315.txt  Pasted-You-are-going-to-generate-a-Python-project-that-implements-a-sparse-sine-activated-Liquid-State-Mac-1754509079686_1754509079687.txt
docs/: ADVANCED_CONVENIENCE_API_TUTORIAL.md  (+14 more)
(+177 files in other folders)
