[project]
name = "lsm-enhanced-tokenizer"
version = "0.1.0"
description = "Enhanced LSM with configurable sinusoidal embeddings and flexible tokenizer backends"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.21.0,<2.0",
    "pandas>=1.3.0",
    "tensorflow>=2.10.0",
    "scikit-learn>=1.0.0",
    "requests>=2.25.0",
    "datasets>=2.14.0",
    "transformers>=4.21.0",
    "tiktoken>=0.5.0",
    "spacy>=3.4.0",
    "psutil>=5.8.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
]

test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
]
